...
    <string name="active_favors_text">Active</string>
    <string name="archived_favors_text">Archived</string>

    <string name="favo_coins_item_placeholder">%d</string>
    <string name="user_name_item_placeholder">%s</string>

    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="communicate">Communicate</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="app_lema">Help others help you</string>
...
    <string name="favor_no_nearby_favor">There are no favors around you</string>
    <string name="list_toggle">List</string>
    <string name="map_toggle">Map</string>

    <!--Favor Published View -->
    <string name="accept_favor">Accept</string>
    <string name="favor_respond_success_msg">Favor was successfully updated</string>
    <string name="home">Home</string>
    <string name="favor_request_success_msg">Favor was successfully requested</string>
    <string name="profile">Profile</string>
    <string name="user_not_present_message">User account has been deleted</string>
    <string name="favor_worth">%d coins</string>
    <string name="posted_placeholder">Posted at: %s</string>
...
    <string name="chat_notifications_setting_key">chat_notifications_setting_key</string>
    <string name="map_style_key">map_style</string>


    <string name="error_send_msg_chat">Error sending message</string>
    <!-- Help preferences -->
    <string name="error_database_sync">Failed fetching data</string>
    <string name="help_title">Send feedback</string>
    <string name="help_subtitle">Report technical issues or suggest new features</string>
    <string name="request_favor_draft">Save draft</string>
    <string name="edit_favor">Edit</string>
    <string name="reuse_favor">Reuse</string>
    <string name="cancel_request">Cancel</string>
    <string name="delete_favor">Delete Request</string>
    <string name="favor_cancel_success_msg">Favor successfully cancelled</string>
    <string name="favor_complete_success_msg">Favor successfully completed</string>
    <string name="update_favor_error">Failed to perform operation</string>
    <string name="illegal_request_error">Max requested favors reached. Complete or cancel active favors</string>
    <string name="illegal_accept_error">Max accepted favors reached. Complete or cancel current favor.</string>
    <string name="restart_request">Re-enable</string>
    <string name="complete_favor">Complete</string>
    <string name="old_favor_accepted_by_others">Someone commit your unmodified favor</string>
    <string name="old_favor_cancelled_by_others">Someone cancel committing your unmodified favor</string>
    <string name="committed_helpers">Potential helpers"</string>
    <string name="cancel_commit">Cancel commit</string>
    <string name="commit_favor">Commit</string>

    <string name="title_map">Nearby Favors</string>
    <string name="title_favors">My Favors</string>

    <!-- Chat -->
    <string name="start_chatting">No messages</string>
...
    <!-- User Info Page -->
    <string name="favors_created_format">Favors created: %d</string>
    <string name="favors_accepted_format">Favors accepted: %d</string>
    <string name="favors_completed_format">Favors completed: %d</string>
    <string name="likes_format">Positive\nfeedbacks: %d</string>
    <string name="dislikes_format">Negative\nfeedbacks: %d</string>
    <string name="feedback_message">Feedback received! Thanks for sharing your opinion</string>
    <string name="report_user_message">User has been reported! Thanks for your help</string>
    <string name="report_user_text">Report user</string>
    <string name="report_description">Report the user in case of inappropriate behaviour</string>
    <string name="feedback_description">Rate your experience with this user to help others</string>
    <string name="positive_feedback">All good!</string>
    <string name="negative_feedback">Bad experience</string>
    <string name="change_profile_picture_title">Please upload or capture a picture</string>
    <string name="change_display_name_title">Change display name</string>


    <!-- Shop Page -->
    <string name="shop">Shop</string>
...
    <string name="shop_pay_message">Coming soon!</string>
    <string name="favo_coins_text">Favo Coins</string>
    <string name="special_offers_text">Special offers</string>
    <string name="buy_favo_coins_text">Buy Favo Coins</string>

    <!-- Invite option -->
    <string name="invite_text">Invite</string>
    <string name="share_tip_checkout_favor">Check out this favor in the Favo App!</string>

    <!-- FavorEditting Page-->
    <string name="request_page_title">New favor</string>
    <string name="title_required_message">Title must be set to request a favor</string>
    <string name="fields_limit_exceeded_message">All fields must respect the required limits</string>

    <string name="report_favor_message">Favor has been reported! Thanks for your help</string>
    <string name="report_favor_text">Report</string>
    <string name="optional_text">Optional</string>
    <string name="upload_pic_btn">upload picture</string>
    <string name="camera_btn">open camera</string>

    <string name="set_location_message">The favor location is set to your current position. Would you like to change it?</string>
    <string name="set_location_yes">Yes, take me to the map</string>
...
