<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_favor_published"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context=".view.tabs.addFavor.FavorPublishedView">

    <androidx.constraintlayout.widget.ConstraintLayout
...
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:ems="10"
                            android:focusable="true"
                            android:padding="10dp"
...
                            android:drawablePadding="10dp"
                            android:layout_margin="10dp"
                            android:gravity="center"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_location_on_24dp"
                            android:drawablePadding="10dp"
                            android:gravity="center"
                            android:layout_margin="10dp"
...
                android:background="@color/material_green_500"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">

                <Button
                    android:id="@+id/chat_button"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/commit_complete_button"
                    android:layout_alignBottom="@id/commit_complete_button"
                    android:layout_gravity="end"
                    android:layout_toStartOf="@+id/commit_complete_button"
                    android:backgroundTint="#ffff"
                    android:drawableStart="@drawable/ic_chat_24dp"
                    android:text="Chat" />
...
