...
        android:elevation="1dp"
        android:gravity="top|end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ch.epfl.favo.view.NonClickableToolbar
        android:id="@+id/toolbar_main_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:elevation="1dp"
        android:maxHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
...
            android:textStyle="bold"
            android:visibility="gone" />

    </ch.epfl.favo.view.NonClickableToolbar>

    <fragment
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_view"
        app:layout_constraintLeft_toLeftOf="parent"
...
