...

    </fragment>
    <fragment
        android:id="@+id/nav_map"
        android:name="ch.epfl.favo.view.tabs.MapPage"
        android:label="Map"
        tools:layout="@layout/fragment_map">
        <action
            android:id="@+id/action_nav_map_to_nearby_favor_list"
            app:destination="@id/nav_nearby_favor_list"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/action_nav_map_to_nav_favorlist"
...
            <argument
                android:name="LOCATION_ARGS"
                android:defaultValue="@null"
                app:argType="com.google.android.gms.maps.model.LatLng" />
        </action>
        <action
            android:id="@+id/action_nav_map_to_favorPublishedView"
            app:destination="@id/favorPublishedView">
            <argument
                android:name="FAVOR_ARGS"
                android:defaultValue="@null"
                app:argType="string" />
        </action>
...
